C2: meet between unloaded and speculative types is not symmetric

XMLWordPrintable

    • b24

        In the CI run containing the fix for JDK-8322726 we have started seeing the following test to fail:

        compiler/runtime/unloaded/TestMHUnloaded.java

        To reproduce:
        Run with additional VM flag -XX:+AlwaysIncrementalInline


        === Meet Not Symmetric ===
        t = java/lang/Object:TopPTR *,iid=top (inline_depth=InlineDepthTop) (speculative=compiler/runtime/unloaded/TestMHUnloadedHelper$$Lambda+0x000078e7370469a0 (java/util/function/BiPredicate):AnyNull:exact *,iid=top (inline_depth=-2))
        this= java/util/function/BiPredicate:TopPTR *,iid=top (inline_depth=InlineDepthTop)
        mt=(t meet this)= java/util/function/BiPredicate:TopPTR *,iid=top (inline_depth=InlineDepthTop)
        t_dual= java/lang/Object * (speculative=compiler/runtime/unloaded/TestMHUnloadedHelper$$Lambda+0x000078e7370469a0 (java/util/function/BiPredicate):NotNull:exact * (inline_depth=2))
        this_dual= java/util/function/BiPredicate *
        mt_dual= java/util/function/BiPredicate *
        mt_dual meet t_dual= java/lang/Object *
        mt_dual meet this_dual= java/util/function/BiPredicate *


        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (c:\\sb\\prod\\1715016654\\workspace\\open\\src\\hotspot\\share\\opto\\type.cpp:975), pid=2272, tid=33376
        # fatal error: meet not symmetric
        #

        --------------- T H R E A D ---------------

        Current thread (0x0000019d411e3aa0): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=33376, stack(0x000000613ee00000,0x000000613ef00000) (1024K)]


        Current CompileTask:
        C2:501 104 b java.lang.invoke.LambdaForm$MH/0x0000019d01004400::invoke (25 bytes)

        Stack: [0x000000613ee00000,0x000000613ef00000]
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0xc7cd31] os::win32::platform_print_native_stack+0x101 (os_windows_x86.cpp:235)
        V [jvm.dll+0xf3d24b] VMError::report+0x149b (vmError.cpp:1010)
        V [jvm.dll+0xf3f8ee] VMError::report_and_die+0x80e (vmError.cpp:1845)
        V [jvm.dll+0x540d3e] report_fatal+0x7e (debug.cpp:214)
        V [jvm.dll+0xebad87] Type::check_symmetrical+0x2d7 (type.cpp:975)
        V [jvm.dll+0xec5e47] Type::meet_helper+0x367 (type.cpp:1011)
        V [jvm.dll+0xec11b8] Type::join_helper+0x68 (type.hpp:188)
        V [jvm.dll+0xebdf89] TypeKlassPtr::filter_helper+0x29 (type.cpp:1105)
        V [jvm.dll+0x3fcd3a] ConstraintCastNode::Value+0xea (castnode.cpp:56)
        V [jvm.dll+0xccc6fb] PhaseIterGVN::transform_old+0x29b (phaseX.cpp:1237)
        V [jvm.dll+0xcc87d9] PhaseIterGVN::optimize+0x259 (phaseX.cpp:1047)
        V [jvm.dll+0x4da18f] Compile::inline_incrementally_cleanup+0x1ff (compile.cpp:2093)
        V [jvm.dll+0x4d9b30] Compile::inline_incrementally+0x380 (compile.cpp:2144)
        V [jvm.dll+0x4cda22] Compile::Optimize+0x222 (compile.cpp:2274)
        V [jvm.dll+0x4cb583] Compile::Compile+0x11f3 (compile.cpp:864)
        V [jvm.dll+0x3db6e9] C2Compiler::compile_method+0x179 (c2compiler.cpp:145)
        V [jvm.dll+0x4e8747] CompileBroker::invoke_compiler_on_method+0x747 (compileBroker.cpp:2308)
        V [jvm.dll+0x4e5dbb] CompileBroker::compiler_thread_loop+0x33b (compileBroker.cpp:1964)
        V [jvm.dll+0x7e8416] JavaThread::thread_main_inner+0x266 (javaThread.cpp:762)
        V [jvm.dll+0xea0797] Thread::call_run+0x1b7 (thread.cpp:226)
        V [jvm.dll+0xc7b336] thread_native_entry+0xd6 (os_windows.cpp:552)
        C [ucrtbase.dll+0x2268a] (no source info available)
        C [KERNEL32.DLL+0x17ac4] (no source info available)
        C [ntdll.dll+0x5a4e1] (no source info available)

              Assignee:
              Vladimir Ivanov
              Reporter:
              David Holmes
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

                Created:
                Updated:
                Resolved: