8331885: C2: meet between unloaded and speculative types is not symmetric

Reviewed-by: mbaesken
Backport-of: 7652f9811bfddf08650b0c3277012074873deade